2003-01-03  Richard Williamson   <rjw@apple.com>

        Fix to 3131226.  Don't force a layout when the document view is set 
        on the page's scrollview.  A layout would occur indirectly as a result
        of reflectScrolledClipView: being called when the document view
        was set.  The khtmlpart/khtmlview/WebHTMLView would be out of sync
        at this point and a layout would have unintended and incorrect
        side effects.
        
        Reviewed by Darin (and tested by John).

        * WebView.subproj/WebDynamicScrollBarsView.h:
        * WebView.subproj/WebDynamicScrollBarsView.m:
        (-[WebDynamicScrollBarsView updateScrollers]):
        * WebView.subproj/WebViewPrivate.m:
        (-[WebView _setDocumentView:]):

=== Alexander-48 ===

2003-01-02  Richard Williamson   <rjw@apple.com>

        Increase the minimum font size to 9pt.  This bounds the lower
        size of the sizes array used for named sizes.  Net effect is
        to increase xx-small from 8pt to 9pt.  xx-small is used by
        www.microsoft.com.
                
        Reviewed by hyatt.

        * WebView.subproj/WebPreferences.m:
        (+[WebPreferences load]):

2003-01-02  Darin Adler  <darin@apple.com>

        Reviewed by Don.

        - at Scott and Don's request, roll out small text anti-aliasing cutoff

        Turns out this makes small text look worse, not better. We're not going to respect
        this setting, and in Panther AppKit will almost certainly be changed not to either.

        * WebCoreSupport.subproj/WebTextRenderer.m: Rolled out yesterday's change using CVS.

2003-01-02  Darin Adler  <darin@apple.com>

        Reviewed by John and Don.

	- fixed 3137661 -- REGRESSION: autoscroll selection is broken

	The new logic in WebCore is slightly pickier, and can't abide a mouse-moved event
	coming in during a drag. Unfortunately, we were sending a fake mouse-moved event
	during a drag, so lets not do that.

        * WebView.subproj/WebHTMLView.m: